syntax = "proto3";

package auth_service;
option go_package = "auth_service/interface/grpc/genproto/auth";

service AuthService {
    rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}

message CheckTokenRequest {
    string AccessToken = 1;
}

message CheckTokenResponse {
    string UUID = 1;
    string Username = 2;
    string Email = 3;
    string Password = 4;
    string Fullname = 5;
}
